<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceScreen
        android:key="screen_content"
        android:title="@string/settings_section_content_title"
        android:summary="@string/settings_screen_content_summary"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <Preference
            android:key="p_settings_repos"
            android:title="@string/ext_repos_title"
            android:summary="@string/ext_repos_summary"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="p_settings_ext_browser"
            android:title="@string/ext_browser_title"
            android:summary="@string/ext_browser_summary"
            app:iconSpaceReserved="false" />

        <PreferenceCategory
            android:key="pc_parental_control_settings"
            android:title="@string/settings_category_parental_control"
            app:iconSpaceReserved="false">

            <EditTextPreference
                android:key="PARENTAL_CONTROL_PIN"
                android:title="@string/settings_parental_pin_title"
                android:summary="@string/settings_parental_pin_summary"
                android:inputType="numberPassword"
                app:iconSpaceReserved="false" />

            <EditTextPreference
                android:key="PARENTAL_CONTROL_ADMIN_PIN"
                android:title="@string/settings_parental_admin_pin_title"
                android:summary="@string/settings_parental_admin_pin_summary"
                android:inputType="numberPassword"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="PARENTAL_CONTROL_REMOVE_PIN"
                android:title="@string/settings_parental_remove_pin_title"
                android:summary="@string/settings_parental_remove_pin_summary"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="PARENTAL_CONTROL_REMOVE_ADMIN_PIN"
                android:title="@string/settings_parental_remove_admin_pin_title"
                android:summary="@string/settings_parental_remove_admin_pin_summary"
                app:iconSpaceReserved="false" />

            <ListPreference
                android:key="PARENTAL_CONTROL_MAX_AGE"
                android:title="@string/settings_parental_max_age_title"
                android:summary="@string/settings_parental_max_age_summary"
                android:entries="@array/parental_control_age_entries"
                android:entryValues="@array/parental_control_age_values"
                android:defaultValue=""
                app:iconSpaceReserved="false" />

            <Preference
                android:key="PARENTAL_CONTROL_UNLOCK"
                android:title="@string/settings_parental_unlock_title"
                android:summary="@string/settings_parental_unlock_summary"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_playback"
        android:title="@string/player_settings"
        android:summary="@string/settings_screen_playback_summary"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:title="@string/autoplay_settings"
            app:iconSpaceReserved="false">

            <SwitchPreference
                android:key="AUTOPLAY"
                android:title="@string/settings_autoplay"
                android:defaultValue="true"
                android:summaryOn="@string/settings_autoplay_on"
                android:summaryOff="@string/settings_autoplay_off"
                app:iconSpaceReserved="false" />

            <EditTextPreference
                android:key="p_settings_autoplay_buffer"
                android:title="@string/settings_autoplay_buffer_title"
                android:dialogMessage="@string/settings_autoplay_buffer_dialog_message"
                android:defaultValue="3"
                android:inputType="number"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="pc_extra_buffering_settings"
            android:title="@string/player_settings_extra_buffer_title"
            app:iconSpaceReserved="false">

            <SwitchPreference
                android:key="FORCE_EXTRA_BUFFERING"
                android:title="@string/settings_force_extra_buffer_title"
                android:summary="@string/settings_force_extra_buffer_summary"
                android:defaultValue="false"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/player_settings"
            app:iconSpaceReserved="false">

            <SwitchPreference
                android:key="PLAYER_GESTURES"
                android:title="@string/settings_player_gestures"
                android:defaultValue="true"
                android:summaryOn="@string/settings_player_gestures_on"
                android:summaryOff="@string/settings_player_gestures_off"
                app:iconSpaceReserved="false" />

            <SwitchPreference
                android:key="KEEP_SCREEN_ON_WHEN_PAUSED"
                android:title="@string/settings_keep_screen_on_when_paused"
                android:summary="@string/settings_keep_screen_on_when_paused_summary"
                android:defaultValue="false"
                app:iconSpaceReserved="false" />

            <ListPreference
                android:key="preferred_player"
                android:title="@string/settings_trailer_player_title"
                android:summary="@string/settings_trailer_player_summary"
                android:entries="@array/trailer_player_names"
                android:entryValues="@array/trailer_player_values"
                android:defaultValue="ask"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="preferred_player_reset"
                android:title="@string/settings_trailer_player_reset"
                android:summary="@string/settings_trailer_player_reset_summary"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/settings_server_voe_category"
            app:iconSpaceReserved="false">

            <SwitchPreference
                android:key="SERVER_AUTO_SUBTITLES_DISABLED"
                android:title="@string/settings_server_voe_title"
                android:summary="@string/settings_server_voe_summary"
                android:defaultValue="true"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="@string/settings_default_tracks_title"
            android:summary="@string/settings_default_tracks_summary"
            app:iconSpaceReserved="false">

            <EditTextPreference
                android:key="PREFERRED_AUDIO_LANGUAGE"
                android:title="@string/settings_preferred_audio_title"
                android:summary="@string/settings_preferred_audio_summary"
                android:defaultValue=""
                app:iconSpaceReserved="false" />

            <EditTextPreference
                android:key="PREFERRED_SUBTITLE_LANGUAGE"
                android:title="@string/settings_preferred_subtitle_title"
                android:summary="@string/settings_preferred_subtitle_summary"
                android:defaultValue=""
                app:iconSpaceReserved="false" />

            <ListPreference
                android:key="PREFERRED_MAX_HEIGHT"
                android:title="@string/settings_max_resolution_title"
                android:summary="@string/settings_max_resolution_summary"
                android:entries="@array/max_resolution_names"
                android:entryValues="@array/max_resolution_values"
                android:defaultValue="0"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_appearance"
        android:title="@string/settings_category_appearance"
        android:summary="@string/settings_screen_appearance_summary"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pc_appearance_settings"
            android:title="@string/settings_category_appearance"
            app:iconSpaceReserved="false">

            <ListPreference
                android:key="APP_LANGUAGE"
                android:title="@string/settings_app_language_title"
                android:summary="@string/settings_app_language_summary"
                android:defaultValue="system"
                app:iconSpaceReserved="false" />

            <ListPreference
                android:key="SELECTED_THEME"
                android:title="@string/settings_theme_title"
                android:summary="%s"
                android:entries="@array/theme_names"
                android:entryValues="@array/theme_values"
                android:defaultValue="default"
                app:iconSpaceReserved="false" />

            <SwitchPreference
                android:key="IMMERSIVE_MODE"
                android:title="@string/settings_immersive_mode"
                android:summary="@string/settings_immersive_mode_summary"
                android:summaryOn="@string/settings_immersive_mode_on"
                android:summaryOff="@string/settings_immersive_mode_off"
                android:defaultValue="false"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_network"
        android:title="@string/settings_category_network_title"
        android:summary="@string/settings_screen_network_summary"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pc_network_settings"
            android:title="@string/settings_category_network_title"
            app:iconSpaceReserved="false">

            <Preference
                android:key="p_scan_resolver_qr"
                android:title="@string/settings_scan_resolver_qr_title"
                android:summary="@string/settings_scan_resolver_qr_summary"
                app:iconSpaceReserved="false" />

            <ListPreference
                android:key="p_doh_provider_url"
                android:title="@string/settings_doh_provider_title"
                android:summary="%s"
                android:entries="@array/doh_provider_names"
                android:entryValues="@array/doh_provider_urls"
                android:defaultValue="https://cloudflare-dns.com/dns-query"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="pc_subdl_settings"
            android:title="@string/settings_category_subdl"
            app:iconSpaceReserved="false">

            <EditTextPreference
                android:key="SUBDL_API_KEY"
                android:title="@string/settings_subdl_api_key"
                android:summary="@string/settings_subdl_api_key_summary"
                android:inputType="text"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_cloud_sync"
        android:title="@string/cloud_sync_title"
        android:summary="@string/cloud_sync_screen_summary"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:key="pc_supabase_config"
            android:title="@string/supabase_config_category"
            app:iconSpaceReserved="false">
            <EditTextPreference
                android:key="supabase_url"
                android:title="@string/supabase_url_title"
                android:summary="@string/supabase_url_summary"
                android:inputType="textUri"
                app:iconSpaceReserved="false" />
            <EditTextPreference
                android:key="supabase_public_key"
                android:title="@string/supabase_public_key_title"
                android:summary="@string/supabase_public_key_summary"
                android:inputType="text"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="supabase_copy_sql"
                android:title="@string/supabase_copy_sql_title"
                android:summary="@string/supabase_copy_sql_summary"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="supabase_open_sql"
                android:title="@string/supabase_open_sql_title"
                android:summary="@string/supabase_open_sql_summary"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="pc_cloud_account"
            android:title="@string/cloud_sync_account_category"
            app:iconSpaceReserved="false">
            <Preference
                android:key="supabase_instructions"
                android:title="@string/supabase_instructions_title"
                android:summary="@string/supabase_instructions_summary"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="cloud_account_status"
                android:title="@string/cloud_sync_account_status"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="cloud_sign_in"
                android:title="@string/cloud_sync_sign_in"
                android:summary="@string/cloud_sync_sign_in_summary"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="cloud_sign_up"
                android:title="@string/cloud_sync_sign_up"
                android:summary="@string/cloud_sync_sign_up_summary"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="cloud_sign_out"
                android:title="@string/cloud_sync_sign_out"
                app:iconSpaceReserved="false" />
            <Preference
                android:key="cloud_sync_now"
                android:title="@string/cloud_sync_now"
                android:summary="@string/cloud_sync_now_summary"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="screen_backup"
        android:title="@string/backup_category_title"
        android:summary="@string/settings_screen_backup_summary"
        android:widgetLayout="@layout/preference_widget_chevron"
        app:iconSpaceReserved="false">

        <PreferenceCategory
            android:title="@string/backup_category_title"
            app:iconSpaceReserved="false">

            <Preference
                android:key="key_backup_export_mobile"
                android:title="@string/backup_export_title"
                android:summary="@string/backup_export_summary"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="key_backup_import_mobile"
                android:title="@string/backup_import_title"
                android:summary="@string/backup_import_summary"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="key_backup_refresh_cache_mobile"
                android:title="@string/settings_refresh_cache_title"
                android:summary="@string/settings_refresh_cache_summary"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="key_backup_export_db_mobile"
                android:title="@string/backup_db_export_title"
                android:summary="@string/backup_db_export_summary"
                app:iconSpaceReserved="false" />

            <Preference
                android:key="key_backup_import_db_mobile"
                android:title="@string/backup_db_import_title"
                android:summary="@string/backup_db_import_summary"
                app:iconSpaceReserved="false" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceCategory
        android:title="@string/miscelaneous_title"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="UPDATE_CHECK_ENABLED"
            android:title="@string/settings_update_check"
            android:summary="@string/settings_update_check_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <Preference
            android:icon="@drawable/ic_telegram"
            android:key="p_settings_telegram"
            android:title="@string/settings_telegram"
            app:iconSpaceReserved="false" />

        <Preference
            android:icon="@drawable/ic_settings_about"
            android:key="p_settings_about"
            android:title="@string/settings_about"
            app:iconSpaceReserved="false" />

        <Preference
            android:icon="@drawable/ic_settings_help"
            android:key="p_settings_help"
            android:title="@string/settings_help"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
